Make footer responsive and fix body overlap

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,6 @@ html {
 
 body {
   height: 100%;
-  position: relative;
   background-color: var(--color-bg);
   color: var(--color-text);
 }
@@ -252,22 +251,30 @@ button {
 }
 
 footer {
-  padding: 4em;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--color-bg-1);
+  border-top: var(--separator);
+  padding-bottom: 1em;
+}
+.footer__inner {
+  padding: 5%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 4em;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 20em;
-  background: var(--color-bg-1);
-  border-top: var(--separator);
   overflow: hidden;
   font-family: "Source Sans Pro";
 }
 
+@media screen and (max-width: 650px) {
+  .footer__inner {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4em;
+    row-gap: 2em;
+  }
+}
 .footer__text {
-  flex: 1;
   font-weight: 100;
 }
 
@@ -279,12 +286,18 @@ footer {
 
 .footer__links > * {
   display: block;
-  margin: 0.25em;
+  margin: 0.25em 0;
 }
 
 .footer__links > span {
   font-size: 1.3em;
   font-weight: 300;
+}
+
+@media screen and (max-width: 650px) {
+  .footer__links > span {
+    font-size: 1em;
+  }
 }
 
 .footer__links > a {
@@ -293,10 +306,9 @@ footer {
 }
 
 .copyright {
-  position: absolute;
-  left: 1em;
-  bottom: 1em;
+  font-size: 0.7em;
   opacity: 0.5;
+  margin-left: 2em;
 }
 
 .overlay {
